Made SexDistribution a reference table
SVN-Revision: 444